--- a/public/locales/ru/home.json
+++ b/public/locales/ru/home.json
@@ -27,8 +27,27 @@
     "promo": "Откройте для себя возможность смотреть фильмы онлайн бесплатно в отличном качестве с кинотеатром Иви!"
   },
   "compilations": {
-    "militants": "Лучшие боевики",
-    "comedies": "Лучшие комедии"
+    "militants": {
+      "title": "Лучшие боевики",
+      "description": ""
+    },
+    "comedies": {
+      "title": "Лучшие комедии",
+      "description": "Любишь смотреть онлайн комедии с участием Эдди Мёрфи, Джима Керри или Адама Сэндлера? Считаешь лучшим кино именно комедийные фильмы, которые вызывают смех и улыбки?"
+    },
+    "military": {
+      "title": "Военные фильмы",
+      "description": "Лучшие военные фильмы расскажут вам о событиях, свидетелем которых вам посчастливилось НЕ БЫТЬ."
+    },
+    "drama": {
+      "title": "Лучшие драмы",
+      "description": "Вы не относитесь к числу поклонников фильмов с бесконечными драками, бешеными погонями и стрельбой, а предпочитаете по-настоящему душевное кино?"
+    },
+    "detectives": {
+      "title": "Лучшие Детективы",
+      "description": "Лучшие фильмы детективы привлекают зрителей кажущейся обыденностью сюжета и обстановки. Здесь может не быть необычных спецэффектов."
+    },
+    "view": "Смотреть подборку"
   },
   "top": {
     "title": "за неделю"
