feat: creators title

--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -45,6 +45,8 @@
     "leave": "Write a comment"
   },
   "creators": {
+    "title": "Actors and creators",
+    "more": "More",
     "filmmaker": "Director",
     "actor": "Actor",
     "scenario": "Scenery",
