--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -45,6 +45,8 @@
     "leave": "Оставить комментарий"
   },
   "creators": {
+    "title": "Актеры и создатели",
+    "more": "Еще",
     "filmmaker": "Режисер",
     "actor": "Актер",
     "scenario": "Сценарий",
