feat: add full header tests, add local storage auth save

--- a/public/locales/en/registration.json
+++ b/public/locales/en/registration.json
@@ -8,6 +8,7 @@
     "subtitle": "to use the service on any device"
   },
   "passwordMessage": "Enter password to login",
+  "passwordErrorMessage": "Password must be 4 to 16 characters",
   "emailPlaceholder": "Via email",
   "passwordPlaceholder": "Enter password",
   "passwordPlaceholderCreate": "Create a password",
