feat: add general comments state

--- a/public/locales/en/movie.json
+++ b/public/locales/en/movie.json
@@ -97,7 +97,7 @@
     ],
     "commentsInput": {
       "placeholder": "Write a review",
-      "submit": "Sew"
+      "submit": "Send"
     },
     "showButton": "Show more"
   }
