feat: ready admin page base structure

--- a/public/locales/en/admin.json
+++ b/public/locales/en/admin.json
@@ -5,6 +5,6 @@
   },
   "name": "Name",
   "name_ru": "Name (Russian)",
-  "name_eng": "Name (English)",
+  "name_en": "Name (English)",
   "update": "Update"
 }
