--- a/public/locales/ru/admin.json
+++ b/public/locales/ru/admin.json
@@ -5,6 +5,6 @@
   },
   "name": "Имя",
   "name_ru": "Имя (Русское)",
-  "name_eng": "Имя (Аглийское)",
+  "name_en": "Имя (Аглийское)",
   "update": "Обновить"
 }
