--- a/public/locales/ru/registration.json
+++ b/public/locales/ru/registration.json
@@ -7,6 +7,8 @@
     "title": "Войдите или зарегистрируйтесь",
     "subtitle": "чтобы пользоваться сервисом на любом устройстве"
   },
+  "googleButton": "Регистрация / Вход через Google",
+  "vkButton": "Регистрация / Вход через Vk",
   "passwordMessage": "Введите пароль чтобы войти",
   "passwordErrorMessage": "Пароль должен быть от 4 до 16 символов",
   "emailPlaceholder": "Через email",
