--- a/public/locales/ru/admin.json
+++ b/public/locales/ru/admin.json
@@ -6,5 +6,7 @@
   "name": "Имя",
   "name_ru": "Имя (Русское)",
   "name_en": "Имя (Аглийское)",
-  "update": "Обновить"
+  "update": "Обновить",
+  "search": "Поиск по имени...",
+  "find": "Найти"
 }
