feat: ssr top ten query

--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -100,5 +100,10 @@
       "submit": "Отправить"
     },
     "showButton": "Показать ещё"
+  },
+  "not-found": {
+    "title": "Фильм не найден",
+    "content": "Такой фильм не найден",
+    "link": "Вернутся к катологу фильмов?"
   }
 }
