--- a/public/locales/en/registration.json
+++ b/public/locales/en/registration.json
@@ -8,7 +8,7 @@
     "subtitle": "to use the service on any device"
   },
   "googleButton": "Sing Up / Log in with Google",
-  "vkButton": "Sing Up / Log in with Vk",
+  "vkButton": "Sing Up / Log in with VK",
   "passwordMessage": "Enter password to login",
   "passwordErrorMessage": "Password must be 4 to 16 characters",
   "emailPlaceholder": "Via email",
