--- a/public/locales/ru/admin.json
+++ b/public/locales/ru/admin.json
@@ -8,5 +8,13 @@
   "name_en": "Имя (Аглийское)",
   "update": "Обновить",
   "search": "Поиск по имени...",
-  "find": "Найти"
+  "find": "Найти",
+  "more": "Показать еще",
+  "access_denied": {
+    "title": "Иви - Доступ закрыт",
+    "content": "У вас нет доступа к этой странице",
+    "link": "Вернуться на главную?",
+    "route": "/"
+  },
+  "delete": "Удалить"
 }
