--- a/public/locales/ru/movie.json
+++ b/public/locales/ru/movie.json
@@ -97,7 +97,11 @@
     ],
     "commentsInput": {
       "placeholder": "Написать отзыв",
-      "submit": "Отправить"
+      "submit": "Отправить",
+      "errors": [
+        "Должено быть не меньше 5 символов",
+        "Не удалось отправить комментарий"
+      ]
     },
     "showButton": "Показать ещё"
   },
