--- a/public/locales/ru/filters.json
+++ b/public/locales/ru/filters.json
@@ -11,7 +11,10 @@
     "actor": "Актеры",
     "director": "Режиссеры"
   },
-  "reset": "Сбросить фильтры",
+  "reset": {
+    "filters": "Сбросить фильтры",
+    "page": "Сбросить страницу"
+  },
   "all": {
     "genres": "Все жанры",
     "countries": "Все страны",
