--- a/public/locales/ru/dropDownCategory.json
+++ b/public/locales/ru/dropDownCategory.json
@@ -1,116 +1,15 @@
 {
-  "movies": {
-    "genres": [
-      "Драма",
-      "Фэнтези",
-      "История",
-      "Приключения",
-      "Комедия",
-      "Мелодрама",
-      "Боевик",
-      "Фантастика",
-      "Триллер",
-      "Военный",
-      "Вестерн",
-      "Семейный",
-      "Фильм-нуар",
-      "Музыка",
-      "Ужасы",
-      "Детектив",
-      "Документальный",
-      "Спорт",
-      "Короткометражка",
-      "Для взрослых"
-    ],
-    "countries": [
-      "Русские",
-      "Американские",
-      "Советское кино"
-    ],
-    "years": [
-      "Фильмы 2023 года",
-      "Фильмы 2022 года",
-      "Фильмы 2021 года",
-      "Фильмы 2020 года"
-    ],
-    "a": [
-      "1","2"
-    ]
+  "years": {
+    "movies": "Фильмы {{year}} года",
+    "series": "Сериалы {{year}} года",
+    "cartoons": "Мультики {{year}} года"
   },
-  "series": {
-    "genres": [
-      "Семейные",
-      "Музыка",
-      "Ужасы",
-      "Детективы",
-      "Артхаус",
-      "Мьюзиклы",
-      "Драмы",
-      "Фентези",
-      "Криминал",
-      "Мультфильмы",
-      "Боевики",
-      "Фантастика",
-      "Короткометражные",
-      "Для взрослых",
-      "Для детей",
-      "Триллеры",
-      "Военные",
-      "Вестерны",
-      "История",
-      "Приключения",
-      "Комедии",
-      "Аниме"
-    ],
-    "countries": [
-      "Русские",
-      "Зарубежные",
-      "Американские",
-      "Корейские",
-      "Турецкие"
-    ],
-    "years": [
-      "Сериалы 2023 года",
-      "Сериалы 2022 года",
-      "Сериалы 2021 года",
-      "Сериалы 2020 года"
-    ]
-  },
-  "cartoons": {
-    "genres": [
-      "Аниме",
-      "Драмы",
-      "Фентези",
-      "Криминал",
-      "История",
-      "Приключения",
-      "Комедии",
-      "Мелодрама",
-      "Мультфильмы",
-      "Боевики",
-      "Биография",
-      "Фантастика",
-      "Триллеры",
-      "Военные",
-      "Вестерны",
-      "Семейные",
-      "Музыка",
-      "Ужасы",
-      "Артхаус",
-      "Мьюзиклы",
-      "Для детей"
-    ],
-    "countries": [
-      "Советские",
-      "Русские",
-      "Американские",
-      "Зарубежные"
-    ],
-    "years": [
-      "Мультики 2023 года",
-      "Мультики 2022 года",
-      "Мультики 2021 года",
-      "Мультики 2020 года"
-    ]
+  "countries": {
+    "usa": "Американские",
+    "russia": "Русские",
+    "ussr": "Советское кино",
+    "foreign": "Зарубежные",
+    "turkey": "Турецкие",
+    "korea": "Корейские"
   }
 }
