feat: add admin button

--- a/public/locales/ru/admin.json
+++ b/public/locales/ru/admin.json
@@ -16,5 +16,6 @@
     "link": "Вернуться на главную?",
     "route": "/"
   },
-  "delete": "Удалить"
+  "delete": "Удалить",
+  "button": "Админ панель"
 }
